--- a/dashboard.html
+++ b/dashboard.html
@@ -49,29 +49,52 @@
 									</header>
 									<span class="image main"><img src="images/new-dashboard-hero.jpg" alt="" /></span>
 									<h2>SPRINT 1: investigation and research</h2>
-									<span class="image main"><img src="images/old-timeline.jpg" alt="" style="width: 75%; margin: auto;" /></span>
 									<h3>Usability issues:</h3>
 									<p>The Timeline was supposed to be the one-stop shop for users to check the status of their properties: Rent-collection status, Maintenance requests, and important notifications. However, analytics revealed that users were <strong>completely ignoring</strong> the timeline. Our research uncovered the following problems:</p>
 									<h3>OBSERVATION 1: Too much content</h3>
 									<p>We realized that notifications could quickly pile up, making the timeline overwhelming and unusable - especially if the landlord's portfolio included multiple properties.</p>
 									<span class="image main"><img src="images/timeline-problems.jpg" alt="" /></span>
-									<h3>OBSERVATION 2: Users want to know about rent</h3>
-									<p>Based on <strong>heatmaps</strong>, we noticed that the most common action for users when they entered the site was to click 'Transactions' in the navigation. This was further reinforced by user research which showed that the main use case for landlords entering the NestEgg app was to check their rent status. As a property owner, I want to know that I'm making money on my investment! However, our transactions page did not provide an easy, at-a-glance view of the user's rent status, so landlords were forced to manually add together transaction line items to figure out how much they were still owed for the month.</li>
+									<h3>OBSERVATION 2: Users' priority is to check rent collection status</h3>
+									Our user research showed that the number one use case for users was to check their rent collection status. The Timeline was supposed to provide users with that information, but because the Timeline was cluttered and confusing, <strong>users were going to the Transactions page to check their rent status</strong>. (This was further verified by our study of our <strong>heatmaps</strong> - 'Transactions' was the most clicked nav item). However, our Transactions page did not provide an at-a-glance view of the user's rent status. Users were manually adding together line items to figure out their rent collection status.</li>
 									</ul></p>
-									<span class="image main"><img src="images/transactions-desktop.jpg" alt="" /></span>
-									<h2>SPRINT 2: CONCept development and prototyping</h2>
-									<p>The next step was to begin to tackle solutions. We began by wireframing redesigns, which we honed with the help of internal testing and multiple feedback sessions with our stakeholders and product team. We drilled down to a few crucial changes that we wanted to make to our product.</p>
-									<div class="image main">
-										<img src="images/wireframes.jpg" alt="old designs" title="old designs"/>
-										<i class="img-caption">Wireframes</i>
+									<span class="image main content-block"><img src="images/transactions-desktop.jpg" alt="" /></span>
+									<div class="row content-block" style="margin-bottom: 3em; display: flex; align-items: center;">
+										<div class="8u 12u$(small)">
+											<div class="image main">
+												<img src="images/rent-user-persona.jpg" alt="old designs" title="old designs"/>
+											</div>
+										</div>
+										<div class="4u 12u$(small)">
+											<p style="font-size: 22px !important"><i>How can we provide a better rent experience to our users?</i></p>
+										</div>
+									</div>
+									<div class="row content-block">
+										<div class="6u 12u$(small)" style="margin-top: 6em">
+											<h2>SPRINT 2: CONCept development and prototyping</h2>
+											<p>We identified crucial changes that we wanted to make and wireframed redesigns, which we honed with internal testing and feedback sessions with stakeholders and the product team. </p>
+										</div>
+										<div class="6u 12u$(small)">
+											<div class="image main">
+												<img src="images/wireframes.jpg" alt="old designs" title="old designs"/>
+												<i class="img-caption">Wireframes</i>
+											</div>
+										</div>
 									</div>
 									<h2>SPRINT 3: USER TESTING & ITERATION</h2>
-									<p>After clarifying our direction, we created hi-fidelity mockups and conducted user research sessions to affirm that our changes would be beneficial to the User Experience. </p>
-									<h3>CHANGE 1: New dashboard</h3>
-									<p>Because the timeline had become unusable, I replaced the timeline with a dashboard that would provide an at-a-glance answer to the key questions that most of our users were logging into our App with.  Since we identified that the most prominent of those questions was, "has my rent been collected?", we prominently featured a new rent summary module at the top of the page. To prevent the dashboard from having an overwhelming amount of content, I limited the number of notifications that could appear in each module.</p>
+									<p>After clarifying our direction, we created hi-fidelity mockups and conducted user research sessions to affirm that our changes would be beneficial to the User Experience. We settled on a new dashboard design that would tackle some of the key issues.</p>
+								</div>
+								<h2 style="text-align: center; margin-top: 3em">Summary of changes</h2>
+								<div class="content-block center-contents">
+									<div style="max-width: 90%; width: 70em;" class="center-contents">
+										<img class="homepage-img" style="max-width: 1100px; border-radius: 25px; margin-bottom: 3em;" src="images/timeline-comparison-graphic.jpg" alt=""/>
+									</div>
+								</div>
+								<div class="inner project-inner">
+									<h3>New dashboard</h3>
+									<p>The New dashboard just displays the crucial information users need. A rent summary module provides an at-a-glance view of the users portfolio. To cut down on clutter, notifications are bucketed by category.</p>
 									<span class="image main"><img class="img-shadow grow-img-scale" src="images/dashboard-desktop.jpg" alt="" /></span>
-									<h3>Change 2: New rent view</h3>
-									<p>For deeper insights into the user's rent status across their whole portfolio, we added a 'Rent view'. Since users were mainly concerned about which properties had NOT completed rent collection for the month, we allowed users to easily sort the view by 'Outstanding balances'.</p>
+									<h3>New rent view</h3>
+									<p>For a more granular view of rent collection status, users can click the new Rent and Fees page. By default, the page is filtered to show 'Outstanding balances' by property, since that is they key concern for most users.</p>
 									<div class="image main grow-img-scale">
 										<img class="img-shadow" src="images/rent-view-overview.jpg" alt="" />
 										<i class="img-caption">New rent view, w/ 2 properties</i>
@@ -81,7 +104,7 @@
 										<img class="img-shadow" src="images/property-page.jpg" alt="" />
 										<i class="img-caption">Rent view for a single property</i>
 									</div>
-									<p>While we were at, I updated our transactions page as well to make it more easily scannable!</p>
+									<p>The transactions page also got a makeover to make it more easily scannable.</p>
 									<div class="image main grow-img-scale">
 										<img class="img-shadow" src="images/all-transactions.jpg" alt="" />
 										<i class="img-caption">New Transactions page</i>
@@ -89,9 +112,10 @@
 									<h2>SPRINT 4: development & conclusion</h2>
 									<p>Once we were ready, we passed off our designs to the engineering team for development.</p>
 									<p>Were we successful? Studying user behavior after we rolled out changes confirmed for me that this project was a success. Negative customer feedback pertaining to the timeline decreased drastically. Customers actively began using the new Rent view page. We felt confident that we had improved our product in a way that had vastly improved the fundamental experience for our users.</p>
-								<div class="bottom-nav">
-									<a href="maintenance-redesign.html">&#8592; Previous Project</a>
-									<a href="index.html" style="float: right;">View more work &#8594;</a>
+									<div class="bottom-nav">
+										<a href="maintenance-redesign.html">&#8592; Previous Project</a>
+										<a href="index.html" style="float: right;">View more work &#8594;</a>
+									</div>
 								</div>
 							</section>
 
