--- a/maintenance-redesign.html
+++ b/maintenance-redesign.html
@@ -106,13 +106,13 @@
 											<div class="6u 12u$(small)">
 												<div class="image main grow-img-scale">
 													<img class="grow-img-shadow" src="images/old-designs.jpg" alt="old designs" title="old designs"/>
-													<i class="img-caption">old designs</i>
+													<i class="img-caption">Old designs</i>
 												</div>
 											</div>
 										</div>
 
 											<p>
-												Next, we used <strong>Analyzed tracking data</strong> for some high-level verification of our hypotheses. We found that there was indeed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages.
+												Next, we <strong>analyzed tracking data</strong> for some high-level verification of our hypotheses. We found that there was indeed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages.
 											</p>
 									</div>
 									<div class="content-block">
@@ -133,8 +133,8 @@
 												</p>
 											</div>
 										</div>
-										<div class="image main">
-											<img class="grow-img-scale" src="images/user-personas.jpg" alt="">
+										<div class="image main grow-img-scale">
+											<img class="" src="images/user-personas.jpg" alt="">
 											<i class="img-caption">User personas</i>
 										</div>
 										<h3>
@@ -149,7 +149,7 @@
 										<p class="">We consolidated and prioritized our findings, based on criteria like how much impact we estimated the issue was having and how easy it would be to tackle each issue (given the limited dev resources at our startup).</p>
 										<div class="image main">
 											<img src="images/notion.jpg" alt="">
-											<i class="img-caption">Notion was the perfect tool for organizing research findings</i>
+											<i class="img-caption">Organizing research findings in Notion</i>
 										</div>
 										<h3>
 											Top 3 findings
@@ -188,8 +188,13 @@
 									<div class="content-block">
 										<h2>Step 3: Redesign</h2>
 										<p>
-											I designed prototypes tackling the key problem points that we identified, beginning with lo-fi mockups, which I honed with the help of internal testing with our team, as well as third-party testers.
+											I designed prototypes tackling the key problem points that we identified, beginning with flow-charts and lo-fi mockups, which I honed with the help of internal testing with our team, as well as third-party testers.
 										</p>
+										<div class="image main">
+											<img class="" src="images/flow-chart.jpg" alt="old designs" title="old designs"/>
+											<i class="img-caption">ASAP flow comparison</i>
+										</div>
+										<h2 style="margin-bottom: 2em">Summary of changes</h2>
 										<h3>
 											Increasing Discoverability
 										</h3>
@@ -244,35 +249,36 @@
 										<p>After a user reports an issue, they have to wait for up to 24 hours before they can view a price and book a Pro.</p>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/chat-flow.jpg" alt="old designs" title="old designs"/>
-											<i class="img-caption">Old flow with chat.</i>
+											<i class="img-caption">Old flow with chat</i>
 										</div>
 										<h2>New flow</h2>
 										<p>We can provide the user with the ability to see a price (based on historic averages for each trade) and book a Pro immediately!</p>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/trade-flow.jpg" alt="old designs" title="old designs"/>
-											<i class="img-caption">New flow with up front price information.</i>
+											<i class="img-caption">New flow with up front price information</i>
 										</div>
 										<h2>ITERATE, ITERATE, ITERATE...</h2>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/iterations.jpg" alt="old designs" title="old designs"/>
-											<i class="img-caption">We took our flow through multiple iterations.</i>
+											<i class="img-caption">We took our flow through multiple iterations</i>
 										</div>
 									</div>
-									</div>
-									<div class="content-block center-contents">
-										<img class="homepage-img" style="max-width: 1100px;" src="images/maint-job-finals.png" alt="" />
 									</div>
 									<div class="inner project-inner">
 										<div class="content-block">
 												<h2>conclusion</h2>
 												<h3>Were we successful?</h3>
-												<p>We directly addressed some user pain-points, saw increased up-take of our maintenance product, and got positive feedback from our users.<br /><br /> However, one takeaway from this project was to improve our AB testing framework so that we could to verify our hypotheses with greater certainty.</p>
+												<p>We were able to transform the maintenance service in a way that vastly improved our users' experience. We directly addressed some user pain-points, saw increased up-take of our maintenance product, and received positive feedback from our users.<br /><br /> One takeaway for the future is to improve our AB testing framework so that we can have more data to back our design choices.</p>
 										</div>
+									</div>
+									<div class="content-block center-contents">
+										<img class="homepage-img" style="max-width: 1100px;" src="images/maint-job-finals.png" alt="" />
+									</div>
 
-										<div class="bottom-nav">
-											<a href="nestegg.html">&#8592; Previous Project</a>
-											<a href="dashboard.html" style="float: right;">Next Project &#8594;</a>
-										</div>
+									<div class="bottom-nav inner project-inner">
+										<a href="nestegg.html">&#8592; Previous Project</a>
+										<a href="dashboard.html" style="float: right;">Next Project &#8594;</a>
+									</div>
 							</section>
 
 					</div>
