--- a/about.html
+++ b/about.html
@@ -47,24 +47,24 @@
 
 								<div class="inner">
 									<header>
-										<h2>ABOUT ME</h2>
+										<h1>ABOUT ME</h1>
 									</header>
-									<h3>PROFESSIONAL BACKGROUND</h3>
+									<h2>PROFESSIONAL BACKGROUND</h2>
 									<p>
-									My journey started in high school, when I designed custom t-shirts on my friend's sreen-printing machine and toted around a notebook, writing the 'next great American novel'. (It wasn't that great :) Since then, I've learned the ins-and-outs of computer science, honed my graphic design skills in a variety of gigs, worked as a content-writer, and combined all of these skills to design and build mobile products and web applications.
+									My journey started in high school, when I designed custom t-shirts on my friend's screen-printing machine and toted around a notebook, writing the 'Next Great American Novel'. (It wasn't that great :) Since then, I've learned the ins-and-outs of computer science, honed my graphic design skills in a variety of gigs, worked as a content-writer, and combined all of these skills to design and build mobile products and web applications.
 									<br />
 									<br />
 									Currently, I work at <a href="https://nestegg.rent/">NestEgg,</a> a startup that aims to transform the property rental experience for residents and landlords. I started out in a hybrid dev/design role, but not long after I was hired, the Design Director left, and I took over leading design for the company. In this role, I've had the privilege of helping steer the product across the <strong>Series-A</strong> milepost, lead a transfiguration of our design system, and expand the design team as we tripled the org size.
-									It's been a privilege working here and getting to grow alongside the company, and I've got my fingers crossed for Series-B!
-									<h3 style="margin-top: 2em;">Ethical design</h3>
+									It's been a privilege working here and getting to grow alongside the company! Fingers crossed for Series-B!
+									<h2 style="margin-top: 2em;">Ethical design</h2>
 									My work with my community, combined with my passion for design and technology, has led me to an obssession with the issue of ethical design. As much as technology has benefited our society, it has also produced many negative externalities. Social media, for instance, seems to have contributed substantially to the mental health crisis, and threatened our democracy by polarizing people in algorithmically-curated echo-chambers. We need better ethical frameworks for design, more conscientious leadership in the design world, and a massive investment in research so that we can gain a deeper understanding of how new technologies can affect us -- both in terms of our individual psychology and our collective social fabric. It's my hope to head to grad school this fall to study ethical design and pioneer initiatives that will lead to healthier minds and more vibrant communities.
 									<br />
 									<br />
-									<h3>Outside of work</h3>
-									Outside of work, my passion is for serving displaced and marginalized peoples and for mentoring students. A formative experience for me was <a href="https://noahskang.wixsite.com/moria">volunteering at a refugee camp in Greece in 2017.</a> Nowadays, I mentor youth and college-students in my free-time. I also sing and write songs when I have a chance. <i>Here's a fun one me and my band recently did for Christmas during quarantine:</i>
+									<h2>Outside of work</h2>
+									Outside of work, my passion is for serving displaced and marginalized peoples and for mentoring students. A formative experience for me was <a href="https://noahskang.wixsite.com/moria">volunteering at a refugee camp in Greece in 2017.</a> Nowadays, I mentor youth and college-students in my free-time. I also sing and write songs when I have a chance! <i>Here's a fun one me and my band recently did for Christmas during quarantine:</i>
 									</p>
 									<iframe width="728" height="410" src="https://www.youtube.com/embed/urTzQSHZVTM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="max-width: 100%" allowfullscreen></iframe>
-									<h3 style="margin-top: 2em">GET CONNECTED</h3>
+									<h2 style="margin-top: 2em">GET CONNECTED</h2>
 									<p>I love meeting new people and building relationships, so please feel free to reach out if you are interested in my work or hearing more about my story! :)</p>
 									<p>You can email me at: <a href="mailto:noahskang@gmail.com">noahskang@gmail.com.</a></p>
 								</div>
