--- a/dashboard.html
+++ b/dashboard.html
@@ -60,8 +60,8 @@
 									<span class="image main content-block"><img src="images/transactions-desktop.jpg" alt="" /></span>
 									<div class="row content-block" style="margin-bottom: 3em; display: flex; align-items: center;">
 										<div class="8u 12u$(small)">
-											<div class="image main">
-												<img src="images/rent-user-persona.jpg" alt="old designs" title="old designs"/>
+											<div class="image main grow-img-scale">
+												<img src="images/rent-user-persona.jpg" alt="user persona" title="user persona"/>
 											</div>
 										</div>
 										<div class="4u 12u$(small)">
@@ -83,17 +83,17 @@
 									<h2>SPRINT 3: USER TESTING & ITERATION</h2>
 									<p>After clarifying our direction, we created hi-fidelity mockups and conducted user research sessions to affirm that our changes would be beneficial to the User Experience. We settled on a new dashboard design that would tackle some of the key issues.</p>
 								</div>
-								<h2 style="text-align: center; margin-top: 3em">Summary of changes</h2>
+								<h1 style="text-align: center; margin-top: 3em">Summary of changes</h1>
 								<div class="content-block center-contents">
 									<div style="max-width: 90%; width: 70em;" class="center-contents">
 										<img class="homepage-img" style="max-width: 1100px; border-radius: 25px; margin-bottom: 3em;" src="images/timeline-comparison-graphic.jpg" alt=""/>
 									</div>
 								</div>
 								<div class="inner project-inner">
-									<h3>New dashboard</h3>
+									<h2>New dashboard</h2>
 									<p>The New dashboard just displays the crucial information users need. A rent summary module provides an at-a-glance view of the users portfolio. To cut down on clutter, notifications are bucketed by category.</p>
 									<span class="image main"><img class="img-shadow grow-img-scale" src="images/dashboard-desktop.jpg" alt="" /></span>
-									<h3>New rent view</h3>
+									<h2>New rent view</h2>
 									<p>For a more granular view of rent collection status, users can click the new Rent and Fees page. By default, the page is filtered to show 'Outstanding balances' by property, since that is they key concern for most users.</p>
 									<div class="image main grow-img-scale">
 										<img class="img-shadow" src="images/rent-view-overview.jpg" alt="" />
@@ -114,7 +114,7 @@
 									<p>Were we successful? Studying user behavior after we rolled out changes confirmed for me that this project was a success. Negative customer feedback pertaining to the timeline decreased drastically. Customers actively began using the new Rent view page. We felt confident that we had improved our product in a way that had vastly improved the fundamental experience for our users.</p>
 									<div class="bottom-nav">
 										<a href="maintenance-redesign.html">&#8592; Previous Project</a>
-										<a href="index.html" style="float: right;">View more work &#8594;</a>
+										<a href="index.html" style="float: right;">View all projects &#8594;</a>
 									</div>
 								</div>
 							</section>
