--- a/maintenance-redesign.html
+++ b/maintenance-redesign.html
@@ -45,7 +45,6 @@
 								<div class="inner project-inner">
 									<header class="major">
 										<h1>Maintenance Flow Redesign</h1>
-										<p class="subtitle">Problem statement: Users are not adopting our maintenance feature</h2>
 									</header>
 									<span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span>
 									<div class="">
@@ -59,9 +58,12 @@
 											NestEgg is an app that aims to replace traditional property managers by empowering mom and pop landlords to easily self-manage their own portfolios. (To learn more, check out our <a href="https://nestegg.rent/">website.</a>)
 											<br/><br/>
 											One of NestEgg's key features is on-demand maintenance coordination. When a resident reports a maintenance issue, NestEgg handles it so that the landlord doesn't need to be bothered - finding local Pros, handling scheduling, and providing live in-app updates to the landlords.
-											<br/><br/>
-											A concerning problem we encountered was that a significant percentage of our users were not using our maintenance feature. We ran a research project to figure out why.
 										</p>
+									</div>
+									<div class="content-block">
+										<h2>Problem</h2>
+										<p>
+										A significant percentage of our users were not using our maintenance feature, which was the lynch pin of our business model. We wanted to figure out why.</p>
 									</div>
 									<div class="content-block">
 										<h2>
@@ -112,7 +114,7 @@
 										</div>
 
 											<p>
-												Next, we <strong>analyzed tracking data</strong> for some high-level verification of our hypotheses. We found that there was indeed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages.
+												Next, we <strong>analyzed tracking data</strong>, which showed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages.
 											</p>
 									</div>
 									<div class="content-block">
@@ -123,13 +125,13 @@
 											<div class="6u 12u$(small)">
 												<h3>Research objectives</h3>
 												<p>
-													Discover how users are interacting with our maintenance product, with particular focus on the areas of our hypotheses related to visibility, friction, and education.
+													Discover how users are interacting with our maintenance product, with particular focus on discoverability, friction, and education.
 												</p>
 											</div>
 											<div class="6u 12u$(small)">
 												<h3>User characteristics</h3>
 												<p>
-													Existing landlords using our application, including both landlords who had used our maintenance product and landlords who had not.
+													Existing landlords using our application.
 												</p>
 											</div>
 										</div>
@@ -140,13 +142,13 @@
 										<h3>
 											User interviews
 										</h3>
-										<p class="">We conducted interviews with our research group in which we gave the users common tasks (e.g., ‘you have a broken faucet. How would you use NestEgg to get this issue fixed?’) and examined how users interacted with the App.  In addition, we surveyed users about their experience with our site. We wanted to know what wasn't working for our users, and what was.</p>
+										<p class="">In interviews with our research group we gave the users common tasks (e.g., ‘you have a broken faucet. How would you use NestEgg to get this issue fixed?’) and examined how they interacted with the App. We also surveyed users about their experience with NestEgg.</p>
 										<div class="image main">
 											<img src="images/user-interviews.jpg" alt="">
 											<i class="img-caption">User interviews</i>
 										</div>
 
-										<p class="">We consolidated and prioritized our findings, based on criteria like how much impact we estimated the issue was having and how easy it would be to tackle each issue (given the limited dev resources at our startup).</p>
+										<p class="">We consolidated and prioritized each our findings, based on criteria like the estimated impact of each issue and how easily we thought we could solve it.</p>
 										<div class="image main">
 											<img src="images/notion.jpg" alt="">
 											<i class="img-caption">Organizing research findings in Notion</i>
@@ -165,7 +167,7 @@
 												<tbody>
 													<tr>
 														<td>Many users were <strong>not aware</strong> that we offered a maintenance service. Some users could not find where they could order a Pro or view past maintenance requests.</td>
-														<td>Increase discoverability of maintenance service</td>
+														<td>Increase discoverability of maintenance service.</td>
 													</tr>
 													<tr>
 														<td>Users <strong>did not understand</strong> how our maintenance service worked. Some users thought that we only provided a way for landlords to be notified about maintenance requests, and didn't realize that they could also hire Pros on NestEgg.</td>
@@ -175,7 +177,7 @@
 														<td>Maintenance process was <strong>too long, with multiple drop-off points.</strong> For instance, after reporting an issue, landlords had to wait for up to 24 hours for us to diagnose the issue before they were given a price estimate. During a job, landlords had no way of directly communicating with their Pros, but had to rely on NestEgg to relay messages.</td>
 														<td>
 															<ul>
-																<li>Replace our current '2-part flow' with a single flow</li>
+																<li>Replace our current '2-part flow' with a single flow.</li>
 																<li>Create a more integrated chat experience so that landlords can speak directly to Pros.</li>
 															</ul>
 														</td>
@@ -188,17 +190,17 @@
 									<div class="content-block">
 										<h2>Step 3: Redesign</h2>
 										<p>
-											I designed prototypes tackling the key problem points that we identified, beginning with flow-charts and lo-fi mockups, which I honed with the help of internal testing with our team, as well as third-party testers.
+											I began with flow-charts and lo-fi mockups, which I honed with the help of internal testing with our team and third-party testers.
 										</p>
 										<div class="image main">
 											<img class="" src="images/flow-chart.jpg" alt="old designs" title="old designs"/>
 											<i class="img-caption">ASAP flow comparison</i>
 										</div>
-										<h2 style="margin-bottom: 2em">Summary of changes</h2>
-										<h3>
-											Increasing Discoverability
-										</h3>
-										<p>here are some of the changes we made to increase visibility of the maintenance feature:</p>
+										<h1 style="margin-bottom: 1em">Summary of changes</h1>
+										<h2>
+											Increasing Discoverability:
+										</h2>
+										<p>Changes we made to increase visibility of the maintenance feature:</p>
 										<div class="row" style="margin-top: 3em;">
 											<div class="4u 12u$(medium)">
 												<img src="images/xsell.jpg" class="discoverability-images grow-img-scale" alt="">
@@ -206,7 +208,7 @@
 													Integration with rent
 												</h3>
 												<p>
-													One of our issues was that landlords were coming to our App for rent collection, and never realizing we offered maintenance. To target those users, I integrated maintenance visibility into the rent experience by adding a cross-sell module to the end of the rent onboarding flow.
+													To target users who didn't know about NestEgg maintenance, I added a cross-sell module to the rent onboarding flow.
 												</p>
 											</div>
 											<div class="4u 12u$(medium)">
@@ -215,7 +217,7 @@
 													Top-level visibility
 												</h3>
 												<p>
-													I added a module that would be the first thing that users see when they open the App. I was not concerned about this disrupting the user's timeline experience, since our metrics showed that the timeline wasn't being used very much by our users anyway. <i>In a later sprint, we revisited the timeline and <a href="dashboard.html">turned it into a more useful <strong>dashboard</strong></a>.</i>
+													I added a Timeline module that would be the first thing that users see when they open the App. <i>In a later sprint, we revisited the Timeline and <a href="dashboard.html">turned it into a more useful <strong>dashboard</strong></a>.</i>
 												</p>
 											</div>
 											<div class="4u 12u$(medium)">
@@ -224,34 +226,32 @@
 													<strike>Takeover</strike>
 												</h3>
 												<p>
-													I also explored a takeover ad on the home page, but decided against it after receiving negative user feedback about the change. While it elevated the visibility of maintenance, and may have helped our bottom-line, it <strong>was not user-centered.</strong> The takeover felt like an unwanted interruption, and that is antithetical to one of our key values - to make landlord's lives easier.
+													We decided against a takeover ad on the homepage after receiving negative user feedback on the change. While it elevated the visibility of maintenance, and may have helped our bottom-line, it <strong>was not user-centered.</strong>
 												</p>
 											</div>
 										</div>
-										<h3>Other changes:</h3>
-										<ul>
-											<li>Collaborated with marketing team on <strong>email coupon campaign</strong> to drive first-time adoption of maintenance. (data showed that once a landlord used maintenance once, they were likely to be a repeat customer.)</li>
-											<li><strong>Guest checkout:</strong> Maintenance was previously hidden behind the pay-wall. To drive first time adoption of maintenance, we made some of our maintenance features available from the logged-out experience.</li>
-											</ul>
-										<h3>
-											Make the flow more intuitive:
-										</h3>
-										<p>We made a series of modifications to our maintenance reporting flow. One of the key changes we made was to replace the chat-bot with a form. Our hypothesis was also that many users would actually prefer a form to a chat-bot, due to the speed with which a form can be filled out. We built a reporting form, with plans to AB test this against our extant chat reporting method./</p>
+										<h2>Marketing collaboration:</h2>
+										<p>I know that a key part of driving greater adoption of our maintenance service was marketing, so I intiiated an <strong>email coupon campaign</strong> with our marketing team to drive first-time adoption of maintenance. (data showed that once a landlord used maintenance once, they were likely to be a repeat customer.)
+										</p>
+										<h2>
+											Simplifying the maintenance flow:
+										</h2>
+										<p>One of the key changes we made to our maintenance flow was to replace the chat-bot with a form. Our hypothesis was also that many users would actually prefer a form to a chat-bot, due to the speed with which a form can be completed. We developed the form with plans to AB test with our chat bot.</p>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/chat-problems.jpg" alt="old designs" title="old designs"/>
 											<i class="img-caption">chat vs form</i>
 										</div>
-										<h3>
-											Decreasing friction: replacing 2-step with 1-step flow.
-										</h3>
+										<h2>
+											Decreasing time-to-price:
+										</h2>
 										<p>After users reported a maintenance issue, they would need to wait for our ops team to generate a price (up to 24 hrs). But by that time, many users would already start looking for Pros on their own. I realized that if we could automatically show the user a price estimate based on their job type (based on data abt prices of past jobs, categorized by type), we could show a price to landlords immediately, <strong>cutting 'time-to-price' from 24 hours to minutes.</strong></p>
-										<h2>Old flow</h2>
+										<h3>Old flow</h3>
 										<p>After a user reports an issue, they have to wait for up to 24 hours before they can view a price and book a Pro.</p>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/chat-flow.jpg" alt="old designs" title="old designs"/>
 											<i class="img-caption">Old flow with chat</i>
 										</div>
-										<h2>New flow</h2>
+										<h3>New flow</h3>
 										<p>We can provide the user with the ability to see a price (based on historic averages for each trade) and book a Pro immediately!</p>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/trade-flow.jpg" alt="old designs" title="old designs"/>
@@ -266,8 +266,8 @@
 									</div>
 									<div class="inner project-inner">
 										<div class="content-block">
-												<h2>conclusion</h2>
-												<h3>Were we successful?</h3>
+												<h1>conclusion</h1>
+												<h2>Were we successful?</h2>
 												<p>We were able to transform the maintenance service in a way that vastly improved our users' experience. We directly addressed some user pain-points, saw increased up-take of our maintenance product, and received positive feedback from our users.<br /><br /> One takeaway for the future is to improve our AB testing framework so that we can have more data to back our design choices.</p>
 										</div>
 									</div>
