--- a/dashboard.html
+++ b/dashboard.html
@@ -45,17 +45,21 @@
 								<div class="inner project-inner">
 									<header class="major">
 										<h1>Timeline Redesign</h1>
-										<p class="subtitle">Problem statement: Our timeline / landing page isn't useful to our users.</h2>
+										<p class="subtitle">Problem statement: Our Timeline / landing page isn't useful to our users.</h2>
 									</header>
 									<span class="image main"><img src="images/new-dashboard-hero.jpg" alt="" /></span>
 									<h2>SPRINT 1: investigation and research</h2>
 									<h3>Usability issues:</h3>
-									<p>The Timeline was supposed to be the one-stop shop for users to check the status of their properties: Rent-collection status, Maintenance requests, and important notifications. However, analytics revealed that users were <strong>completely ignoring</strong> the timeline. Our research uncovered the following problems:</p>
+									<p>The Timeline was supposed to be the one-stop shop for users to check the status of their properties: rent-collection status, maintenance requests, and other important notifications. However, analytics revealed that users were <strong>completely ignoring</strong> the timeline. Our research uncovered the following problems:</p>
 									<h3>OBSERVATION 1: Too much content</h3>
-									<p>We realized that notifications could quickly pile up, making the timeline overwhelming and unusable - especially if the landlord's portfolio included multiple properties.</p>
+									<p>We realized that notifications could quickly pile up, making the timeline unusable.</p>
 									<span class="image main"><img src="images/timeline-problems.jpg" alt="" /></span>
+
 									<h3>OBSERVATION 2: Users' priority is to check rent collection status</h3>
-									Our user research showed that the number one use case for users was to check their rent collection status. The Timeline was supposed to provide users with that information, but because the Timeline was cluttered and confusing, <strong>users were going to the Transactions page to check their rent status</strong>. (This was further verified by our study of our <strong>heatmaps</strong> - 'Transactions' was the most clicked nav item). However, our Transactions page did not provide an at-a-glance view of the user's rent status. Users were manually adding together line items to figure out their rent collection status.</li>
+									Our user research showed that the number one use case for users was to check their rent collection status. The Timeline was supposed to provide that information, but because the Timeline was too cluttered, <strong>users were going to the Transactions page to check their rent status</strong>. (This was further verified by our study of our <strong>heatmaps</strong> - 'Transactions' was the most clicked nav item).
+									<br />
+									<br />
+									However, our Transactions page did not provide an at-a-glance view of the user's rent status. Users were manually adding together line items to figure out their rent collection status.</li>
 									</ul></p>
 									<span class="image main content-block"><img src="images/transactions-desktop.jpg" alt="" /></span>
 									<div class="row content-block" style="margin-bottom: 3em; display: flex; align-items: center;">
@@ -81,7 +85,7 @@
 										</div>
 									</div>
 									<h2>SPRINT 3: USER TESTING & ITERATION</h2>
-									<p>After clarifying our direction, we created hi-fidelity mockups and conducted user research sessions to affirm that our changes would be beneficial to the User Experience. We settled on a new dashboard design that would tackle some of the key issues.</p>
+									<p>After clarifying our direction, we created hi-fidelity mockups and conducted user research sessions to affirm that our changes would be beneficial to the user experience. We settled on a new dashboard design that would tackle the problem points we had identified.</p>
 								</div>
 								<h1 style="text-align: center; margin-top: 3em">Summary of changes</h1>
 								<div class="content-block center-contents">
@@ -93,11 +97,11 @@
 									<h2>New dashboard</h2>
 									<p>The New dashboard just displays the crucial information users need. A rent summary module provides an at-a-glance view of the users portfolio. To cut down on clutter, notifications are bucketed by category.</p>
 									<span class="image main"><img class="img-shadow grow-img-scale" src="images/dashboard-desktop.jpg" alt="" /></span>
-									<h2>New rent view</h2>
+									<h2>New Rent and Fees page</h2>
 									<p>For a more granular view of rent collection status, users can click the new Rent and Fees page. By default, the page is filtered to show 'Outstanding balances' by property, since that is they key concern for most users.</p>
 									<div class="image main grow-img-scale">
 										<img class="img-shadow" src="images/rent-view-overview.jpg" alt="" />
-										<i class="img-caption">New rent view, w/ 2 properties</i>
+										<i class="img-caption">New Rent and Fees page, w/ 2 properties</i>
 									</div>
 									<p>Selecting a unit (e.g. '8 Avondale Lndg') in the table of outstanding balances opens a page which shows the rent collection status by resident:</p>
 									<div class="image main grow-img-scale">
