--- a/nestegg.html
+++ b/nestegg.html
@@ -51,26 +51,26 @@
 									<div class="content-block">
 										<h2>What is NestEgg?</h2>
 										<p>
-											At NestEgg, our aim is to empower ordinary people to achieve financial independence through real-estate ownership. One way do this is by providing an ecosystem that allows mom and pop landlords to easily self-manage their own portfolios - obviating the need to hire a property manager, which is very costly. (Check out our <a href="https://nestegg.rent/">website</a> to learn more.)
+											At NestEgg, our aim is to empower ordinary people to achieve financial independence through real-estate ownership. One way we do this is by providing an ecosystem that allows mom and pop landlords to easily self-manage their own portfolios without hiring a property manager. (Check out our <a href="https://nestegg.rent/">website</a> to learn more.)
 									</p>
 									<h2>My role</h2>
 									<p>
-											I joined NestEgg in 2018 in a hybrid dev/design role. In 2020, our Design Director left, and I stepped up to fill in his shoes, taking over product design for the company. I had the privilege of helping pilot our product into a <strong>successful series-A</strong> of 14M, working cross-functionally with a product manager and a team of engineers.
+											I joined NestEgg in 2018 in a hybrid dev/design role, but in 2020, our Design Director left, and I stepped up to fill in his shoes, taking over product design for the company. I had the privilege of helping pilot our product into a <strong>successful series-A</strong> of 14M, working cross-functionally with a product manager and a team of engineers.
 										</p>
 										<h2>Sample of work</h2>
 										 Keep scrolling to view mockups/concepts of some of the key features I've been working on!<br/><br/>
-										 <i>(If you'd like to take a look at deep-dives of my design process, check out my <a href="maintenance-redesign.html">maintenance redesign project</a> or my <a href="dashboard.html">timeline redesign project.</a>)</i>
+										 <i><strong>(For deep-dives of my design process, check out my <a href="maintenance-redesign.html">Maintenance redesign project</a> or my <a href="dashboard.html">Timeline redesign project.</a>)</strong></i>
 									</div>
 								</div>
 
 								<div class="inner-bigger">
-									<h1 style="z-index: 4; text-align: center; margin-top: 3em">Resident portal</h1>
+									<h1 style="z-index: 4; text-align: center; margin-top: 3em">Tenant portal</h1>
 									<p style="text-align: center; margin-bottom: 4em;">Redesign of the tenant portal including a new onboarding experience, dashboard, and payment settings page.</p>
 									<div class="image main img-link-no-cursor" style="margin-bottom: 6em;">
 										<img src="images/resident-portal.png" alt=""/>
 									</div>
 									<h1 style="z-index: 4; text-align: center">NestEggPay</h1>
-									<p style="text-align: center; margin-bottom: 4em;">Rolled out new 'NestEggPay' feature, providing landlords with the ability to pay for expenses with installments out of their future rental income.</p>
+									<p style="text-align: center; margin-bottom: 4em;">Rolled out new <strong>NestEggPay</strong> feature. With NestEggPay, landlords can pay for expenses with installments out of their future rent income.</p>
 									<div class="image main img-link-no-cursor" style="margin-bottom: 6em;">
 										<img src="images/nestegg-pay.png" alt=""/>
 									</div>
