update maintenance redesign with figma iframe

--- a/maintenance-redesign.html
+++ b/maintenance-redesign.html
@@ -266,11 +266,8 @@
 											<img class="grow-img-shadow" src="images/trade-flow.jpg" alt="old designs" title="old designs"/>
 											<i class="img-caption">New flow with up front price information</i>
 										</div>
-										<h2>ITERATE, ITERATE, ITERATE...</h2>
-										<div class="image main grow-img-scale">
-											<img class="grow-img-shadow" src="images/iterations.jpg" alt="old designs" title="old designs"/>
-											<i class="img-caption">We took our flow through multiple iterations</i>
-										</div>
+										<h2>Side-by-side comparison</h2>
+										<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FJMrbO4QlRUlroocFPRRk5f%2FMaintenance-Iterations%3Fpage-id%3D0%253A1%26node-id%3D2%253A2595%26viewport%3D243%252C48%252C0.5%26scaling%3Dscale-down%26starting-point-node-id%3D2%253A2595%26show-proto-sidebar%3D1" allowfullscreen></iframe>
 									</div>
 									</div>
 									<div class="inner project-inner">
