--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
 					</section>
 				<!-- Wrapper -->
 					<div id="wrapper">
+						<!-- One -->
+						<section id="one" class="main">
+							<div class="inner-bigger spotlight">
+								<div class="content 5u 12u$(small)">
+									<header>
+										<h2>NerdWallet</h2>
+									</header>
+									<p>Contact me for more info
+									</p>
+									<div class="roles">
+										<span class="roles-chip">
+											Product Design
+										</span>
+										<span class="roles-chip">
+											User research
+										</span>
+									</div>
+								<!-- <a href="maintenance-redesign.html">View project</a>
+								</div> -->
+								<!-- <div class="7u 12u$(small) center-contents">
+									<a href="maintenance-redesign.html" class="img-link">
+										<img class="homepage-img" src="images/maint1-homepage-shot.jpg" alt="" />
+									</a>
+								</div> -->
+							</div>
+						</section>
+						
 						<!-- Two -->
 							<section id="two" class="main">
 								<div class="inner-bigger spotlight alt style2">
@@ -146,7 +173,7 @@
 							</div>
 							</section>
 
-						<!-- Three -->
+						<!-- Three
 							<section id="one" class="main">
 								<div class="inner-bigger spotlight style1">
 									<div class="5u 12u$(small)">
@@ -174,9 +201,9 @@
 									</a>
 								</div>
 							</div>
-							</section>
+							</section> -->
 
-						<!-- Four -->
+						<!-- Four
 							<section id="two" class="main">
 								<div class="inner-bigger spotlight alt style2">
 									<div class="5u 12u$(small)">
@@ -202,9 +229,9 @@
 										</a>
 									</div>
 								</div>
-							</section>
+							</section> -->
 
-						<!-- Five -->
+						<!-- Five
 							<section id="three" class="main">
 								<div class="inner-bigger spotlight style3">
 										<div class="content 5u 12u$(small)">
@@ -232,7 +259,7 @@
 											<img src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_280/v1502714608/busview_e5naet.png" alt="">
 										</a>
 									</div>
-							</section>
+							</section> -->
 
 				<!-- Footer -->
 					<footer id="footer">
