--- a/about.html
+++ b/about.html
@@ -64,9 +64,7 @@
 									<br />
 									<br />
 									<h2>Outside of work</h2>
-									Outside of work, my passion is for serving displaced and marginalized peoples and for mentoring students. A formative experience for me was <a href="https://noahskang.wixsite.com/moria">volunteering at a refugee camp in Greece in 2017.</a> Nowadays, I mentor youth and college-students in my free-time. I also sing and write songs when I have a chance! <i>Here's a fun one me and my band recently did for Christmas during quarantine:</i>
-									</p>
-									<iframe width="728" height="410" src="https://www.youtube.com/embed/urTzQSHZVTM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="max-width: 100%" allowfullscreen></iframe>
+									Outside of work, my passion is for serving displaced and marginalized peoples and for mentoring students. A formative experience for me was <a href="https://noahskang.wixsite.com/moria">volunteering at a refugee camp in Greece in 2017.</a> Nowadays, I mentor youth and college-students in my free-time. 
 									<h2 style="margin-top: 2em">GET CONNECTED</h2>
 									<p>I love meeting new people and building relationships, so please feel free to reach out if you are interested in my work or hearing more about my story! :)</p>
 									<p>You can email me at: <a href="mailto:noahskang@gmail.com">noahskang@gmail.com.</a></p>
