--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 							</h1>
 							</header>
 							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">With a background in Computer Science, Graphic Design, and Content Writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the effect of technology on our lives. Thanks for taking time to view my work!</p>
+							<p style="max-width: 500px; font-style: italic; margin-left: auto; margin-right: auto;">8/1/24: I was laid off this week, so this site is under construction. Bear with me if something seems unfinished :)</p>
 						</div>
 						<!-- <a href="#banner" class="more">Learn More</a> -->
 					</section>
