--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 							<div class="inner-bigger spotlight">
 								<div class="content 5u 12u$(small)">
 									<header>
-										<h2>NerdWallet</h2>
+										<h2>NerdWallet AI</h2>
 									</header>
-									<p>Contact me for more info
+									<p>Developing an LLM financial advisor.
 									</p>
 									<div class="roles">
 										<span class="roles-chip">
@@ -79,13 +79,13 @@
 											User research
 										</span>
 									</div>
-								<!-- <a href="maintenance-redesign.html">View project</a>
-								</div> -->
-								<!-- <div class="7u 12u$(small) center-contents">
-									<a href="maintenance-redesign.html" class="img-link">
-										<img class="homepage-img" src="images/maint1-homepage-shot.jpg" alt="" />
+								<a href="nerdwallet.html">View project</a>
+								</div> 
+								<div class="7u 12u$(small) center-contents">
+									<a href="nerdwallet.html" class="img-link">
+										<img class="homepage-img" src="images/nerdwallet-homepage-graphic.png" alt="" />
 									</a>
-								</div> -->
+								</div>
 							</div>
 						</section>
 						
