--- a/about.html
+++ b/about.html
@@ -51,20 +51,17 @@
 									</header>
 									<h2>PROFESSIONAL BACKGROUND</h2>
 									<p>
-									My journey started in high school, when I designed custom t-shirts on my friend's screen-printing machine and toted around a notebook, writing the 'Next Great American Novel'. (It wasn't that great :) Since then, I've learned the ins-and-outs of computer science, honed my graphic design skills in a variety of gigs, worked as a content-writer, and combined all of these skills to design and build mobile products and web applications.
+									My journey started in high school, when I designed custom t-shirts on my friend's screen-printing machine and toted around a notebook, writing the 'Next Great American Novel'. Since then, I've learned the ins-and-outs of computer science, honed my graphic design skills in a variety of gigs, worked as a content-writer, and combined all of these skills to design and build mobile products and web applications.
 									<br />
 									<br />
-									Currently, I work at <a href="https://nestegg.rent/">NestEgg,</a> a startup that aims to transform the rental experience by placing human relationships at the center. (We want to do with long-term renting what AirBNB did with short-term stays.) I started out in a hybrid dev/design role, but not long after I was hired, the Design Director left, and I took over leading design for the company.
+									Currently, I'm on the search for my next opportunity.  Ideally, I'm hoping to help shape the future of human-technology interactions through ethical design initiatives.  
 									<br />
-									<br />
-									In this role, I've had the privilege of helping steer the product across the <strong>Series-A</strong> milepost, lead a transfiguration of our design system, and expand the design team as we tripled the org size.
-									It's been a privilege working here and getting to grow alongside the company. Fingers crossed for Series-B!
 									<h2 style="margin-top: 2em;">Ethical design</h2>
-									My work with my community, combined with my passion for design and technology, has led me to an obssession with the issue of Ethical Design. As much as technology has benefited our society, it has also produced many negative externalities. Social media, for instance, seems to have contributed substantially to the mental health crisis, and threatened our democracy by polarizing people in algorithmically-curated echo-chambers. We need better ethical frameworks for design, more conscientious leadership in the design world, and a massive investment in research so that we can gain a deeper understanding of how new technologies can affect us -- both in terms of our individual psychology and our collective social fabric. It's my hope to help pioneer ethical design initiatives that will lead to healthier minds and more vibrant communities.
+									My work with my community, combined with my passion for design and technology, has led me to an obssession with this issue. As much as technology has benefited our society, it has also produced many negative externalities. Social media, for instance, seems to have contributed substantially to the mental health crisis. AI has incredible promise, but there are also attendant perils with integrating such a boundlessly powerful technology into our lives. We need better ethical frameworks for design, more conscientious leadership in the design world, and investment in research so that we can gain a deeper understanding of how new technologies can affect us -- both in terms of our individual psychology and our collective social fabric. It's my hope to help pioneer ethical design initiatives that will lead to healthier minds and more vibrant communities.
 									<br />
 									<br />
 									<h2>Outside of work</h2>
-									Outside of work, my passion is for serving displaced and marginalized peoples and for mentoring students. A formative experience for me was <a href="https://noahskang.wixsite.com/moria">volunteering at a refugee camp in Greece in 2017.</a> Nowadays, I mentor youth and college-students in my free-time. 
+									Outside of work, I'm passionate about investing in the next generation, which I do through mentoring and coaching college students.  This past year I led an addiction-recovery group for students struggling with internet-related addictions. A formative experience for me was <a href="https://noahskang.wixsite.com/moria">volunteering at a refugee camp in Greece in 2017.</a> 
 									<h2 style="margin-top: 2em">GET CONNECTED</h2>
 									<p>I love meeting new people and building relationships, so please feel free to reach out if you are interested in my work or hearing more about my story! :)</p>
 									<p>You can email me at: <a href="mailto:noahskang@gmail.com">noahskang@gmail.com.</a></p>
