under construction notice
under construction notice

--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -46,7 +46,7 @@
 									<header class="major">
 										<h1>NerdWallet AI</h1>
 									</header>
-									<span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span>
+									<!-- <span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span> -->
 									<div class="">
 
 									</div>
@@ -55,12 +55,10 @@
 											Context
 										</h2>
 										<p>
-											NestEgg aims to help ordinary people achieve financial independence through real-estate. We do this by empowering mom and pop landlords to easily self-manage their own portfolios. (To learn more, check out our <a href="https://nestegg.rent/">website.</a>) We also value putting human relationships at the center of the rental experience, doing with long-term renting what AirBNB did with short-term stays.
-											<br/><br/>
-											One of NestEgg's key features is on-demand maintenance coordination. When a resident reports a maintenance issue, NestEgg handles it so that the landlord doesn't need to be bothered - finding local Pros, handling scheduling, and providing live in-app updates to the landlords.
+											This page is under construction; please contact me if you would like more information. 
 										</p>
 									</div>
-									<div class="content-block">
+									<!-- <div class="content-block">
 										<h2>Problem</h2>
 										<p>
 										A significant percentage of our users were not using our maintenance feature, which was the lynch pin of our business model. We wanted to figure out why.</p>
@@ -279,7 +277,7 @@
 									</div>
 									<div class="content-block center-contents">
 										<img class="homepage-img" style="max-width: 1100px;" src="images/maint-job-finals.png" alt="" />
-									</div>
+									</div> -->
 
 									<div class="bottom-nav inner project-inner">
 										<a href="nestegg.html">&#8592; Previous Project</a>
