nerdwallet ai hero update
nerdwallet ai hero update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								</div> 
 								<div class="7u 12u$(small) center-contents">
 									<a href="nerdwallet.html" class="img-link">
-										<img class="homepage-img" src="images/nerdwallet-homepage-graphic.png" alt="" />
+										<img class="homepage-img" src="images/nerd-ai-hero.png" alt="" />
 									</a>
 								</div>
 							</div>
