Editing Nerd AI story
Editing Nerd AI story

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 							    <span class="wrap"></span>
 							</h1>
 							</header>
-							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">With a background in Computer Science, Graphic Design, and Content Writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the effect of technology on our lives. Thanks for taking time to view my work!</p>
-							<p style="max-width: 500px; font-style: italic; margin-left: auto; margin-right: auto;">8/1/24: I was laid off this week, and this site is now under construction. Please bear with me if something seems unfinished! :)</p>
+							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">With a background in Computer Science, Graphic Design, and Content Writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the effect of technology on our lives. Let's work together!</p>
 						</div>
 						<!-- <a href="#banner" class="more">Learn More</a> -->
 					</section>
@@ -96,7 +95,7 @@
 										<header>
 											<h2>NestEgg: Seed to Series-A</h2>
 										</header>
-										<p>Helping build the next prop-tech unicorn from (almost) scratch.</p>
+										<p>Helping build the next prop-tech unicorn.</p>
 										<div class="roles">
 											<span class="roles-chip">
 												UX/UI Design
@@ -112,7 +111,7 @@
 									</div>
 								<div class="7u 12u$(small) center-contents">
 									<a href="nestegg.html" class="img-link">
-										<img class="homepage-img" src="images/resident-portal.png" style=""/>
+										<img class="homepage-img" src="images/resident-portal.png"/>
 									</a>
 								</div>
 							</div>
