--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<section id="banner">
 						<div class="inner" style=>
 							<header style="padding-bottom: none !important">
-							 <h1 class="typewrite" style="text-transform: none !important; border-bottom: none !important; padding-bottom: 0em !important; letter-spacing: 4px" data-period="2000" data-type='[ "Hi, I&#39;m Noah.", "I love to design, code, and write.", "Thanks for visiting my site!"]'>
+							 <h1 class="typewrite" style="text-transform: none !important; border-bottom: none !important; padding-bottom: 0em !important; letter-spacing: 4px" data-period="2000" data-type='[ "Hi, I&#39;m Noah.", "I love to design, code, and write."]'>
 							    <span class="wrap"></span>
 							</h1>
 							</header>
