--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -131,7 +131,7 @@
 											</div>
 											<div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="image-shadow" src="images/ideation.jpg" alt="old designs" title="old designs"/>
+                                                    <img class="image-shadow" src="images/Ideation.jpg" alt="old designs" title="old designs"/>
                                                 </div>
                                             </div>
 										</div>
